<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.twoisthenewzero.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_confirmationFragment"
            app:destination="@id/confirmationFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.twoisthenewzero.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/confirmationFragment"
        android:name="com.example.twoisthenewzero.ui.confirmation.ConfirmationFragment"
        android:label="@string/review"
        tools:layout="@layout/confirmation_fragment">
        <argument
            android:name="listOfSelectedContacts"
            app:argType="com.deepakkumardk.kontactpickerlib.model.MyContacts[]" />
        <argument
            android:name="isRevertFormat"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_confirmationFragment_to_successFragment"
            app:destination="@id/successFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_confirmationFragment_to_failureFragment"
            app:destination="@id/failureFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/successFragment"
        android:name="com.example.twoisthenewzero.ui.success.SuccessFragment"
        android:label="@string/success"
        tools:layout="@layout/fragment_success" />
    <fragment
        android:id="@+id/failureFragment"
        android:name="com.example.twoisthenewzero.ui.failure.FailureFragment"
        android:label="@string/failure"
        tools:layout="@layout/fragment_failure" />
</navigation>